--- a/PasswordManager/WebApplication/Views/Account/Accounts.cshtml
+++ b/PasswordManager/WebApplication/Views/Account/Accounts.cshtml
@@ -14,6 +14,10 @@
         vertical-align: middle !important;
     }
 
+    .search-btn {
+        margin-bottom: 5px;
+    }
+
     .search-box {
         display: inline-flex;
         width: 20%;
@@ -34,10 +38,10 @@
         -webkit-text-security: disc;
     }
 
-        .hidetext:hover {
-            cursor: pointer;
-            -webkit-text-security: none;
-        }
+    .hidetext:hover {
+        cursor: pointer;
+        -webkit-text-security: none;
+    }
 </style>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -132,7 +136,7 @@
                 new SelectListItem { Text = "By name", Value = "name" },
                 new SelectListItem { Text = "By category", Value = "category" },
             }, new { @class = "form-control search-box" })
-            <input type="submit" value="Search" class="btn btn-primary" />
+            <input type="submit" value="Search" class="btn btn-primary search-btn" />
         </div>
     }
     <div>
@@ -223,17 +227,22 @@
                         <div class="row">
                             <div class="form-group col">
                                 @Html.LabelFor(m => m.Login)
-                                @Html.TextBoxFor(m => m.Login, new { @class = "form-control" })
+                                @Html.TextBoxFor(m => m.Login, new { @class = "form-control", @required="required" })
                             </div>
                             <div class="form-group col">
                                 @Html.LabelFor(m => m.Password)
-                                @Html.PasswordFor(m => m.Password, new { @class = "form-control modal-password" })
+                                @Html.PasswordFor(m => m.Password, new { @class = "form-control modal-password", @required = "required" })
                                 <input type="checkbox" onclick="showInputPassword(this)"> Show password
                             </div>
                         </div>
                         <div class="form-group">
                             @Html.LabelFor(m => m.Url)
-                            @Html.TextBoxFor(m => m.Url, new { @class = "form-control" })
+                            <div class="input-group mb-3">
+                                <div class="input-group-prepend">
+                                    <div class="input-group-text">http://</div>
+                                </div>
+                                @Html.TextBoxFor(m => m.Url, new { @class = "form-control" })
+                            </div>
                         </div>
                     </div>
                     <div class="modal-footer">
@@ -271,17 +280,22 @@
                         <div class="row">
                             <div class="form-group col">
                                 @Html.LabelFor(m => m.Login)
-                                @Html.TextBoxFor(m => m.Login, new { @id = "updateLogin", @class = "form-control" })
+                                @Html.TextBoxFor(m => m.Login, new { @id = "updateLogin", @class = "form-control", @required = "required" })
                             </div>
                             <div class="form-group col">
                                 @Html.LabelFor(m => m.Password)
-                                @Html.PasswordFor(m => m.Password, new { @id = "updatePassword", @class = "form-control modal-password" })
+                                @Html.PasswordFor(m => m.Password, new { @id = "updatePassword", @class = "form-control modal-password", @required = "required" })
                                 <input type="checkbox" onclick="showInputPassword(this)"> Show password
                             </div>
                         </div>
                         <div class="form-group">
                             @Html.LabelFor(m => m.Url)
-                            @Html.TextBoxFor(m => m.Url, new { @id = "updateUrl", @class = "form-control" })
+                            <div class="input-group mb-3">
+                                <div class="input-group-prepend">
+                                    <div class="input-group-text">http://</div>
+                                </div>
+                                @Html.TextBoxFor(m => m.Url, new { @id = "updateUrl", @class = "form-control" })
+                            </div>
                         </div>
                     </div>
                     <div class="modal-footer">
