--- a/PasswordManager/WebApplication/Views/Bank/Banks.cshtml
+++ b/PasswordManager/WebApplication/Views/Bank/Banks.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewBag.Title = "Banks";
     var banks = ViewBag.Banks;
+    Layout = "~/Views/Shared/Navbar.cshtml";
 }
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
@@ -57,8 +58,8 @@
             @foreach (var bank in banks)
             {
                 <tr>
-                    <td>@bank.Name</td>
                     <td>@bank.NumberCard</td>
+                    <td>@bank.Name</td>
                     <td>@bank.Date</td>
                     <td>@bank.Cvc</td>
                     <td>
@@ -68,7 +69,7 @@
                 </tr>
             }
             <td colspan="5">
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal">Add</button>
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal">Add credit card</button>
             </td>
         </table>
     </div>
@@ -87,23 +88,23 @@
                     <div class="modal-body">
                         <div class="row">
                             <div class="form-group col">
-                                @Html.LabelFor(m => m.Name)
-                                @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+                                @Html.LabelFor(m => m.NumberCard)
+                                @Html.TextBoxFor(m => m.NumberCard, new { @class = "form-control", @required = "required", @placeholder = "XXXX-XXXX-XXXX-XXXX" })
                             </div>
                         </div>
                         <div class="row">
                             <div class="form-group col">
-                                @Html.LabelFor(m => m.NumberCard)
-                                @Html.TextBoxFor(m => m.NumberCard, new { @class = "form-control" })
+                                @Html.LabelFor(m => m.Name)
+                                @Html.TextBoxFor(m => m.Name, new { @class = "form-control", @required = "required" })
                             </div>
                             <div class="form-group col">
                                 @Html.LabelFor(m => m.Cvc)
-                                @Html.TextBoxFor(m => m.Cvc, new { @class = "form-control" })
+                                @Html.TextBoxFor(m => m.Cvc, new { @class = "form-control", @required = "required", @placeholder = "XXX" })
                             </div>
                         </div>
                         <div class="form-group">
                             @Html.LabelFor(m => m.Date)
-                            @Html.TextBoxFor(m => m.Date, new { @class = "form-control" })
+                            @Html.TextBoxFor(m => m.Date, new { @class = "form-control", @required = "required", @placeholder = "MM/YY" })
                         </div>
                     </div>
                     <div class="modal-footer">
@@ -128,23 +129,23 @@
                     <div class="modal-body">
                         <div class="row">
                             <div class="form-group col">
-                                @Html.LabelFor(m => m.Name)
-                                @Html.TextBoxFor(m => m.Name, new { @id = "updateName", @class = "form-control" })
-                            </div>
-                            <div class="form-group col">
                                 @Html.LabelFor(m => m.NumberCard)
-                                @Html.TextBoxFor(m => m.NumberCard, new { @id = "updateNumberCard", @class = "form-control" })
+                                @Html.TextBoxFor(m => m.NumberCard, new { @id = "updateNumberCard", @class = "form-control", @required = "required", @placeholder = "XXXX-XXXX-XXXX-XXXX" })
                             </div>
                         </div>
                         <div class="row">
                             <div class="form-group col">
-                                @Html.LabelFor(m => m.Cvc)
-                                @Html.TextBoxFor(m => m.Cvc, new { @id = "updateCvc", @class = "form-control"})
+                                @Html.LabelFor(m => m.Name)
+                                @Html.TextBoxFor(m => m.Name, new { @id = "updateName", @class = "form-control", @required = "required" })
                             </div>
                             <div class="form-group col">
-                                @Html.LabelFor(m => m.Date)
-                                @Html.TextBoxFor(m => m.Date, new { @id = "updateDate", @class = "form-control" })
+                                @Html.LabelFor(m => m.Cvc)
+                                @Html.TextBoxFor(m => m.Cvc, new { @id = "updateCvc", @class = "form-control", @required = "required", @placeholder = "XXX" })
                             </div>
+                        </div>
+                        <div class="form-group">
+                            @Html.LabelFor(m => m.Date)
+                            @Html.TextBoxFor(m => m.Date, new { @id = "updateDate", @class = "form-control", @required = "required", @placeholder = "MM/YY" })
                         </div>
                     </div>
                     <div class="modal-footer">
