--- a/PasswordManager/WebApplication/Views/Shared/Navbar.cshtml
+++ b/PasswordManager/WebApplication/Views/Shared/Navbar.cshtml
@@ -10,8 +10,8 @@
     <script type="text/javascript" src="~/lib/jquery/dist/jquery.js"></script>
 </head>
 <body>
-    <header>
-        <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+    <header class="sticky-top">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-controller="Account" asp-action="Accounts">
                     <img src="/Images/passmanager.svg" alt="" width="35" height="35" class="d-inline-block align-text-top">Password Manager
@@ -25,7 +25,7 @@
                             <a class="nav-link active" aria-current="page" asp-controller="Account" asp-action="Accounts">Accounts</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Bank</a>
+                            <a class="nav-link active" asp-controller="Bank" asp-action="Banks">Bank</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" href="#">Generate a password</a>
